update: -added websockets for live bidding -improved tokens/refresh tokens -optimized queries